Actions
Bug #11801
closedi86xpv: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../i86xpv/os/evtchn.c:1222:37: error: cast between incompatible function types from 'int (*)(void *)' to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] (void) add_avintr(NULL, IPL_DEBUG, (avfunc)xen_debug_handler, ^ ../../common/xen/io/xenbus_comms.c:248:31: error: cast between incompatible function types from 'uint_t (*)(void *)' {aka 'unsigned int (*)(void *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] rem_avintr(NULL, IPL_XENBUS, (avfunc)xenbus_intr, xenbus_irq); ^ ../../common/xen/io/xenbus_comms.c: In function 'xb_setup_intr': ../../common/xen/io/xenbus_comms.c:264:36: error: cast between incompatible function types from 'uint_t (*)(void *)' {aka 'unsigned int (*)(void *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] if (!add_avintr(NULL, IPL_XENBUS, (avfunc)xenbus_intr, "xenbus", ^ cc1: all warnings being treated as errors
Testing done: build/install/boot, however, I do not have xen to test with....
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit db830ba58275ad713ffb4ff71cce8c00af84527b
commit db830ba58275ad713ffb4ff71cce8c00af84527b Author: Toomas Soome <tsoome@me.com> Date: 2019-11-15T17:05:47.000Z 11801 i86xpv: cast between incompatible function types Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions